--- a/TodoListManager/res/values/strings.xml
+++ b/TodoListManager/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="app_name">Todo List</string>
     <string name="menu_add">Add</string>
     <string name="task_input_field_hint">Please enter a new task&#8230;</string>
- 	<string name="menu_delete">Delete</string>
+ 	<string name="dialog_delete">Delete</string>
 
 </resources>
