--- a/TodoListManager/res/values/strings.xml
+++ b/TodoListManager/res/values/strings.xml
@@ -2,8 +2,13 @@
 <resources>
 
     <string name="app_name">Todo List</string>
-    <string name="menu_add">Add</string>
-    <string name="task_input_field_hint">Please enter a new task&#8230;</string>
- 	<string name="dialog_delete">Delete</string>
+    <string name="options_menu_add">Add+</string>
+    <string name="new_item_field_hint">Please enter a new Todo&#8230;</string>
+    <string name="context_menu_delete">Delete Item</string>
+    <string name="title_activity_add_new_todo_item">Add New Item</string>
+    <string name="action_settings">Settings</string>
+    <string name="button_cancel">Cancel</string>
+    <string name="button_ok">OK</string>
+    <string name="title_activity_main">MainActivity</string>
 
 </resources>
